# rustworkx

./: .gitignore  .gitlab-ci.yml  Cargo.toml  MANIFEST.in  README.md  benchmark_community.py  benchmark_community_algorithms.py  benchmark_community_execution.py  benchmark_community_helpers.py  benchmark_community_impl.py  benchmark_community_orchestrator.py  benchmark_config_data.py  benchmark_utils.py  benchmark_utils_format.py  benchmark_utils_graph.py  benchmark_utils_impl.py  benchmark_utils_internal.py  benchmark_utils_labels.py  benchmark_utils_scoring.py  dataset_loaders.py  dataset_loaders_builtin.py  dataset_loaders_impl.py  dataset_loaders_parquet.py  dataset_loaders_shared.py  dataset_loaders_snap.py  dataset_loaders_synthetic.py  download_datasets.py  louvain_comparison_test.py  metrics_config.py  noxfile.py  plotting.py  plotting_chart.py  plotting_gcr.py  plotting_impl.py  plotting_shared.py  plotting_tables.py  pyproject.toml  setup.py  simple_community_example.py  test.sh  (+1 more)
docs/source/: conf.py
docs/source/api/algorithm_functions/: community.rst  index.rst
examples/: label_propagation_example.py
releasenotes/notes/: label-propagation-communities-8af29dbc5e4a7301.yaml  optimize-louvain-f72d719ebfc07e88.yaml
results/20250407/: benchmark_results_table.md
results/20250408/: benchmark_results_table.md
results/20250415/: benchmark_results_table.md
results/20251212/: benchmark_results_table.md
results/20260221/: benchmark_results_table.md
retworkx/retworkx/: __init__.py
rustworkx/: __init__.py  __init__.pyi  rustworkx.pyi
rustworkx-core/src/: centrality.rs
rustworkx/community/: __init__.py  __init__.pyi
rustworkx/visualization/: matplotlib.py
src/: community.rs  lib.rs  link_analysis.rs  spatial.rs
src/community/: asyn_lpa.rs  asyn_lpa_communities_strongest.rs  cliques.rs  common.rs  cpm.rs  leiden.rs  louvain.rs  lpa.rs
tests/: test_custom_return_types.py  test_graphml.py  test_random.py
tests/digraph/: test_adjacency_matrix.py  test_bellman_ford.py  test_bipartite.py  test_community.py  test_copy.py  test_deepcopy.py  test_digraph_single_source_all_shortest_paths.py  test_dijkstra.py  test_edges.py  test_find_cycle.py  test_floyd_warshall.py  test_isomorphic.py  test_nodes.py  test_pred_succ.py  test_strongly_connected.py  test_subgraph_isomorphic.py  test_weakly_connected.py
tests/generators/: test_hexagonal.py
tests/graph/: test_adjacency_matrix.py  test_all_connected_subgraphs.py  test_all_shortest_paths.py  test_bellman_ford.py  test_bipartite.py  test_cliques_cpm.py  test_coloring.py  test_community.py  test_connected_components.py  test_deepcopy.py  test_dijkstra.py  test_edgelist.py  test_edges.py  test_floyd_warshall.py  test_geometry.py  test_k_shortest_path.py  test_local_complement.py  test_louvain_leiden.py  test_lpa.py  test_max_weight_matching.py  test_subgraph_isomorphic.py
